# swingboy_rl

./: .gitignore  README.md  SWINGBOY_RL.md
.github/workflows/: ci.yml
assets/meshes/: left_wheel.stl
docs/: repository.md  training.md
mujoco_playground/_src/locomotion/swingboy/: __init__.py  constants.py  joystick.py
mujoco_playground/_src/locomotion/swingboy/xmls/: scene_flat.xml  scene_rough.xml  swingboy.xml
mujoco_playground/_src/locomotion/swingboy/xmls/assets/: base_link_visual_02.stl  right_wheel_visual.stl
mujoco_playground/config/: locomotion_params.py
note/: README.md  index.html  package-lock.json  package.json
note/src/: app.js  data.js  styles.css
policies/: README.md
policies/v0.1.0-legacy/: metadata.yaml  swingboy_rough_latest.onnx  swingboy_track_latest.onnx  swingboy_track_model_1200.onnx
policies/v0.2.0-ddt/: metadata.yaml  policy.onnx  policy.pt
ref/: README.md
ref/ddt_tita/: README.md  flat_env_cfg.py  np3o_cfg.py  rough_env_cfg.py
ros2_ws/: README.md
ros2_ws/src/swingboy_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/swingboy_bringup/config/: controllers.yaml
ros2_ws/src/swingboy_bringup/launch/: gazebo_rl.launch.py  rviz_joint_check.launch.py
ros2_ws/src/swingboy_bringup/rviz/: swingboy_joint_check.rviz
ros2_ws/src/swingboy_bringup/worlds/: rough_test.sdf
ros2_ws/src/swingboy_description/: CMakeLists.txt  meshes  package.xml
ros2_ws/src/swingboy_description/meshes/: right_wheel.stl
ros2_ws/src/swingboy_description/urdf/: swingboy.urdf.xacro
ros2_ws/src/swingboy_rl_controller/: package.xml  setup.cfg  setup.py
ros2_ws/src/swingboy_rl_controller/resource/: swingboy_rl_controller
ros2_ws/src/swingboy_rl_controller/swingboy_rl_controller/: __init__.py  height_scan_publisher.py  keyboard_teleop.py  rl_controller.py
ros2_ws/src/swingboy_tests/: CMakeLists.txt  package.xml
ros2_ws/src/swingboy_tests/scripts/: run_gazebo_rl_test.sh  run_gazebo_smoke.sh
scripts/: analyze_safe_standup_milestones.py  diagnose_isaaclab_wheels.py  diagnose_standing_baseline.py  export_isaaclab_swingboy_policy.sh  play_swingboy_keyboard.py  run_safe_standup_overnight.sh  train_isaaclab_swingboy_recovery.sh  train_isaaclab_swingboy_stand.sh  train_isaaclab_swingboy_track.sh  train_swingboy_chain.sh  tune_wheel_balance_pd.py
sim/isaaclab/: README.md  install_ddt_overlay.sh
sim/isaaclab/robot/: robot.urdf
sim/mujoco/: README.md
sim/mujoco/mujoco_playground/_src/locomotion/: __init__.py
sim/mujoco/mujoco_playground/_src/locomotion/swingboy/: base.py  joystick.py
(+10 files in other folders)
