<?xml version="1.0"?>
<package format="3">
  <name>swingboy_bringup</name>
  <version>0.1.0</version>
  <description>Gazebo Sim bringup for Swingboy.</description>
  <maintainer email="lsy@example.com">lsy</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>forward_command_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>swingboy_description</exec_depend>
  <exec_depend>swingboy_rl_controller</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
