<?xml version="1.0"?>
<package format="3">
  <name>swingboy_description</name>
  <version>0.1.0</version>
  <description>Swingboy robot description for ROS 2 and Gazebo Sim.</description>
  <maintainer email="lsy@example.com">lsy</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
