<?xml version="1.0"?>
<package format="3">
  <name>swingboy_rl_controller</name>
  <version>0.1.0</version>
  <description>ONNX policy runner for controlling Swingboy through ros2_control.</description>
  <maintainer email="lsy@example.com">lsy</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
